--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.62",
+        "psr/simple-cache": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "yajra/laravel-datatables-oracle": "^10.1",
         "yoeunes/toastr": "^2.0"
